fix game page spacing

--- a/app/games/[id]/games.module.css
+++ b/app/games/[id]/games.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-evenly;
     align-items: flex-start;
+    column-gap: 1.5em;
 }
 
 .teamDiv {
@@ -27,6 +28,11 @@
 
 .tournamentLink {
     color: var(--accent-color) !important;
+    font-size: 1.5em;
+    font-style: italic;
+    text-decoration: underline;
+    text-decoration-color: var(--line-color);
+    text-underline-offset: .25em;
 }
 
 /* .tournamentLink::before {
